# pip-package-template

./: README.md  deploy.sh  pyproject.toml  requirements.build.txt
.github/: publish.yml
.github/workflows/: publish.yml  unitests.yml
scripts/: bump-version.sh  deploy.sh  list.sh  package-diff.sh
src/s_utils/: __init__.py
src/sutils/: __init__.py  cprint.py  math.py
src/utils/: __init__.py  draw.py
tests/: build_test.py  cprint.py  cprint_test.py  math_test.py
