[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "utils_esantix"
dynamic = ["version", "dependencies"]

authors = [{ name="Santiago Echevarria", email="santiago93echevarria@gmail.com"}]
description = "Python package with utils"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "utils.__version__"}
dependencies = { file = ["requirements.txt"]}

[project.urls]
Homepage = "https://github.com"